# Resp-Agent

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_zh-CN.md  Resp_agent_chinese.py  Resp_agent_english.py  download_dataset.py  download_models.py  pyproject.toml  requirements.txt
Diagnoser/: config.yaml  data_loader.py  diagnoser_pipeline.py  ds_config_longformer.json  test_longformer.py  train_longformer.py  utils.py
Diagnoser/beats/: __init__.py
Diagnoser/example/output/: diagnoser_results.csv
Diagnoser/example/output_diagnose/: diagnoser_results.csv
Generator/: config.yaml  ds_config_cfm.json  generator_pipeline.py  models.py  train_cfm.py  train_llm.py
Generator/beats/: BEATs.py  Tokenizers.py  backbone.py
resp_agent/: README.md  __init__.py  cli.py
resp_agent/agent/: __init__.py  chinese.py  english.py
resp_agent/beats/: __init__.py  quantizer.py
resp_agent/diagnoser/: __init__.py  pipeline.py  utils.py
resp_agent/generator/: __init__.py  models.py  pipeline.py  utils.py
